--- a/my-app/angular.json
+++ b/my-app/angular.json
@@ -23,6 +23,7 @@
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/bootstrap-icons/font/bootstrap-icons.css",
+              "./node_modules/material-icons/iconfont/material-icons.css",
               "src/main.css"
             ],
             "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.min.js"]
