--- a/my-app/package.json
+++ b/my-app/package.json
@@ -24,6 +24,7 @@
     "bootstrap-icons": "^1.11.3",
     "crypto-js": "^4.2.0",
     "here-js-api": "^2.0.0",
+    "material-icons": "^1.13.12",
     "ngx-cookie-service": "^17.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
